# eiffel

./: .envrc  .gitignore  README.md  flake-old.nix  flake.nix  pyproject.toml
eiffel/: __init__.py  __main__.py  eiffel.yaml
eiffel/analysis/: metrics.py  plot.py
eiffel/callbacks/: notifications.py  plot.py
eiffel/conf/: eiffel.yaml
eiffel/conf/callbacks/: mattermost.yaml  plot.yaml
eiffel/conf/datasets/nfv2/full/: botiot.yaml  cicids.yaml  nb15.yaml  toniot.yaml
eiffel/conf/datasets/nfv2/sampled/: botiot.yaml  cicids.yaml  nb15.yaml  toniot.yaml
eiffel/conf/hydra/job_logging/: eiffel.yaml
eiffel/conf/model/: popoola.yaml
eiffel/conf/partitioner/: dumb.yaml  iid.yaml  niid_class.yaml
eiffel/conf/poisoning/profile/: decrement.yaml  increment.yaml  late.yaml  loud.yaml  mid.yaml  redemption.yaml  stealth.yaml
eiffel/conf/poisoning/type/: targeted.yaml  untargeted.yaml
eiffel/conf/strategy/: fedavg.yaml  fednoagg.yaml
eiffel/core/: client.py  errors.py  experiment.py  pool.py  results.py
eiffel/core/tests/: client_test.py
eiffel/datasets/: __init__.py  dataset.py  nfv2.py  partitioners.py  poisoning.py
eiffel/datasets/tests/: dataset_test.py  nfv2_test.py  partitioners_test.py  poisoning_test.py
eiffel/models/: supervized.py
eiffel/strategy/: fednoagg.py
eiffel/utils/: __init__.py  hydra.py  logging.py  plot.py  resolvers.py  time.py  typing.py
macos/: pyproject.toml
tests/: test_module.py
