[tool.poetry]
name = "eiffel-framework"
version = "0.1.4"
description = "Evaluation Framework for FL-based intrusion detection using Flower."
authors = ["phdcybersec <82591009+phdcybersec@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "eiffel", from = "." }]

[tool.poetry.dependencies]
# GPU-related dependencies (installed with extras)
# ------------------------------------------------
# darwin
tensorflow-metal = { platform = "darwin", version = "~0.6.0", optional = true }
tensorflow-macos = { platform = "darwin", version = "~2.10.0", optional = true }
grpcio = { platform = "darwin", version = ">=1.37.0,<2.0", optional = true }
h5py = { platform = "darwin", version = ">=3.6.0,<3.7", optional = true }
numpy = { platform = "darwin", version = ">=1.23.2,<1.23.3", optional = true }
protobuf = { platform = "darwin", version = ">=3.19.1,<3.20", optional = true }

# linux
tensorflow = { platform = "linux", version = "~2.10.0", optional = true }

# Common dependencies
# -------------------
python = "~3.10"
hydra-core = "^1.3.2"
flwr = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"


[tool.poetry.extras]
darwin = ["tensorflow-metal", "tensorflow-macos", "grpcio", "h5py", "numpy", "protobuf"]
linux = ["tensorflow"]


[tool.poetry.scripts]
# eiffel = "eiffel:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
