[tool.poetry]
name = "eiffel-framework"
version = "0.5.0"
description = "Evaluation Framework for FL-based intrusion detection using Flower."
authors = ["phdcybersec <82591009+phdcybersec@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "eiffel" }]

[tool.poetry.dependencies]

tensorflow = "^2.10.0"
cryptography = "41.0.4"

python = "~3.11"
hydra-core = "^1.3.2"
pandas = "^2.2.1"
scikit-learn = "^1.3.0"
flwr = {extras = ["simulation"], version = "^1.5.0"}
matplotlib = "^3.8.1"
ray = {version = "*", extras = ["data"]}
schema = "^0.7.5"
datasets = "^2.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
ipykernel = "^6.25.2"
ipython = "^8.15.0"
ipywidgets = "^8.1.1"
ipympl = "^0.9.3"


[tool.poetry.scripts]
eiffel = "eiffel.__main__:main"

[tool.ruff]
select = [
    "D",
]

[tool.ruff.pydocstyle]
convention = "numpy"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
